--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,3 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
+
+    <p>
+        <a href="/"> Home</a>
+        <a href="/about"> About</a>
+        <a href="/products"> Products</a>
+    </p>
